[tool.poetry]
authors = ["Max Halford <maxhalford25@gmail.com>"]
description = "A minimalist alternative to dbt"
name = "lea-cli"
packages = [
  {include = "lea", from = "."},
]
version = "0.5.1"

[tool.poetry.dependencies]
Jinja2 = "^3.1.2"
gitpython = "^3.1.40"
pandas = "^2.1.3"
python = ">=3.10,<4"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
rich = "^13.5.3"
sqlglot = ">=22.2,<26.0"
tabulate = "^0.9.0"
typer = "^0.12.3"
rsa = "^4.7"
duckdb = "^1.0.0"
db-dtypes = { version = "^1.1.1", optional = true}
google-cloud-bigquery = { version = "^3.11.4", optional = true}
pandas-gbq = { version = "^0.19.2, <0.25.0", optional = true}

[tool.poetry.extras]
motherduck = ["duckdb"]
bigquery = ["db-dtypes", "google-cloud-bigquery", "pandas-gbq"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"
pre-commit = ">=3.5,<5.0"
pytest = ">=7.4.2,<9.0.0"
ruff = ">=0.1,<0.8"


[tool.pdm.build]
includes = ["lea"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.poetry.scripts]
lea = "lea.main:app"

[tool.ruff]
ignore = ["E501"]
line-length = 100
select = ["E", "F", "I", "UP"] # https://beta.ruff.rs/docs/rules/
target-version = 'py310'

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--doctest-glob=README.md",
  "--ignore=examples",
  "--verbose",
  "--color=yes",
]

[project]
authors = [
    {name = "Max Halford", email = "maxhalford25@gmail.com"},
]
requires-python = "<4,>=3.10"
dependencies = [
    "Jinja2<4.0.0,>=3.1.2",
    "gitpython<4.0.0,>=3.1.40",
    "pandas<3.0.0,>=2.1.3",
    "python-dotenv<2.0.0,>=1.0.0",
    "requests<3.0.0,>=2.31.0",
    "rich<14.0.0,>=13.5.3",
    "sqlglot<26.0,>=22.2",
    "tabulate<1.0.0,>=0.9.0",
    "typer<1.0.0,>=0.12.3",
    "rsa<5.0,>=4.7",
    "duckdb<2.0.0,>=1.0.0",
]
description = "A minimalist alternative to dbt"
name = "lea-cli"
version = "0.5.1"

[project.optional-dependencies]
bigquery = [
    "db-dtypes<2.0.0,>=1.1.1",
    "google-cloud-bigquery<4.0.0,>=3.11.4",
    "pandas-gbq<0.25.0,<1.0.0,>=0.19.2",
]

[project.scripts]
lea = "lea.main:app"

[dependency-groups]
dev = [
    "ipykernel<7.0.0,>=6.21.2",
    "pre-commit<5.0,>=3.5",
    "pytest<9.0.0,>=7.4.2",
    "ruff<0.8,>=0.1",
]
